BOTNTR-007 [Message] Add new line support
- added new line support

--- a/resources/sysadmin/src/Monitor_04.html
+++ b/resources/sysadmin/src/Monitor_04.html
@@ -1,1 +1,1 @@
-Нужно проверить питание монитора, убедиться в надежности контакта кабеля и разъема в мониторе. Теперь работает?
+Нужно проверить питание монитора, убедиться в надежности контакта кабеля и разъема в мониторе.
